Replace another collector with Streams.toList()